# virtual-people-core-serving

./: .bazelrc  .editorconfig  .gitignore  CPPLINT.cfg  MODULE.bazel  WORKSPACE  maven.bazelrc  maven_install.json
.ijwb/: .bazelproject
deploy/: pom_template.xml
src/main/cc/wfa/virtual_people/core/labeler/: BUILD.bazel  labeler.cc  labeler.h  labeler_test.cc  labeler_wrapper.cc  labeler_wrapper.h
src/main/cc/wfa/virtual_people/core/model/: BUILD.bazel  attributes_updater.cc  attributes_updater.h  branch_node_impl.cc  branch_node_impl.h  branch_node_impl_test.cc  conditional_assignment_impl.cc  conditional_assignment_impl.h  conditional_assignment_impl_test.cc  conditional_merge_impl.cc  conditional_merge_impl.h  conditional_merge_impl_test.cc  geometric_shredder_impl.cc  geometric_shredder_impl.h  model_node.cc  model_node.h  model_node_factory.cc  model_node_factory.h  model_serializer.cc  multiplicity_impl.cc  multiplicity_impl.h  population_node_impl.cc  population_node_impl.h  population_node_impl_test.cc  ranked_population_node_impl.cc  ranked_population_node_impl.h  sparse_update_matrix_impl.cc  sparse_update_matrix_impl.h  sparse_update_matrix_impl_test.cc  stop_node_impl.h  update_matrix_impl.cc  update_matrix_impl.h  update_matrix_impl_test.cc  update_tree_impl.cc  update_tree_impl.h  update_tree_impl_test.cc
src/main/cc/wfa/virtual_people/core/model/attributes_updater/: BUILD.bazel  attributes_updater.cc  attributes_updater.h  conditional_assignment_impl.cc  conditional_assignment_impl.h  conditional_assignment_impl_test.cc  conditional_merge_impl.cc  conditional_merge_impl.h  conditional_merge_impl_test.cc  sparse_update_matrix_impl.cc  sparse_update_matrix_impl.h  sparse_update_matrix_impl_test.cc  update_matrix_impl.cc  update_matrix_impl.h  update_matrix_impl_test.cc  update_tree_impl.cc  update_tree_impl.h  update_tree_impl_test.cc
src/main/cc/wfa/virtual_people/core/model/utils/: BUILD.bazel  consistent_hash.cc  consistent_hash.h  consistent_hash_test.cc  constants.h  distributed_consistent_hashing.cc  distributed_consistent_hashing.h  distributed_consistent_hashing_test.cc  feistel.cc  feistel.h  field_filters_matcher.cc  field_filters_matcher.h  hash.cc  hash.h  hash_field_mask_matcher.cc  hash_field_mask_matcher.h  hash_field_mask_matcher_test.cc  update_matrix_helper.cc  update_matrix_helper.h  update_matrix_helper_test.cc  virtual_person_selector.cc  virtual_person_selector.h  virtual_person_selector_test.cc
src/main/cc/wfa/virtual_people/core/selector/: BUILD.bazel  lru_cache.cc  lru_cache.h  vid_model_selector.cc  vid_model_selector.h
src/main/cc/wfa/virtual_people/core/selector/testing/testdata/: BUILD.bazel
src/main/cc/wfa/virtual_people/model_writer/: BUILD.bazel
src/main/kotlin/org/wfanet/virtual_people/core/labeler/: BUILD.bazel  JniLabeler.kt  Labeler.kt
src/main/kotlin/org/wfanet/virtual_people/core/labeler/testing/: AbstractLabelerTest.kt  BUILD.bazel
src/main/kotlin/org/wfanet/virtualpeople/core/common/: BUILD.bazel  HashFarm.kt  Hashing.kt
src/main/kotlin/org/wfanet/virtualpeople/core/labeler/: BUILD.bazel  Labeler.kt
src/main/kotlin/org/wfanet/virtualpeople/core/model/: AttributesUpdaterInterface.kt  BUILD.bazel  BranchNodeImpl.kt  ConditionalAssignmentImpl.kt  ConditionalMergeImpl.kt  GeometricShredderImpl.kt  ModelNode.kt  MultiplicityImpl.kt  PopulationNodeImpl.kt  RankedPopulationNodeImpl.kt  SparseUpdateMatrixImpl.kt  StopNodeImpl.kt  UpdateMatrixImpl.kt  UpdateTreeImpl.kt
src/main/kotlin/org/wfanet/virtualpeople/core/model/utils/: BUILD.bazel  Feistel.kt  FieldFiltersMatcher.kt  UpdateMatrixHelper.kt  VirtualPeopleSelector.kt
src/main/kotlin/org/wfanet/virtualpeople/core/selector/: BUILD.bazel  LRUCache.kt  LruCache.kt  VidModelSelector.kt
src/main/kotlin/org/wfanet/virtualpeople/core/selector/cache/: BUILD.bazel  LRUCache.kt
src/main/kotlin/org/wfanet/virtualpeople/core/selector/resourcekey/: BUILD.bazel  ModelLineKey.kt  ModelRolloutKey.kt
src/main/kotlin/org/wfanet/virtualpeople/core/selector/testing/testdata/: BUILD.bazel
src/main/proto/wfa/measurement/api/v2alpha/: BUILD.bazel
src/main/proto/wfa/virtual_people/core/labeler/: BUILD.bazel  input_labeler.proto
src/main/proto/wfa/virtual_people/core/labeler/test_data/: BUILD.bazel
src/main/resources/selector/: BUILD.bazel
src/main/swig/wfa/virtual_people/core/labeler/: BUILD.bazel  labeler.swig
src/test/cc/wfa/virtual_people/core/labeler/: BUILD.bazel  labeler_integration_test.cc  labeler_test.cc  labeler_wrapper_test.cc  pass1_mode_test.cc  ranked_labeling_integration_test.cc
src/test/cc/wfa/virtual_people/core/labeler/test_data/: BUILD.bazel  labeler_input_13.textproto  labeler_output_01.textproto  labeler_output_02.textproto  labeler_output_03.textproto  labeler_output_04.textproto  labeler_output_05.textproto  labeler_output_06.textproto  labeler_output_07.textproto  labeler_output_08.textproto  labeler_output_09.textproto  labeler_output_10.textproto  labeler_output_11.textproto  labeler_output_12.textproto  labeler_output_13.textproto  labeler_output_14.textproto  labeler_output_15.textproto  labeler_output_16.textproto  toy_model.textproto  toy_model_riegeli_list
src/test/cc/wfa/virtual_people/core/model/: BUILD.bazel  (+11 more)
src/test/cc/wfa/virtual_people/core/selector/: BUILD.bazel  vid_model_selector_test.cc
src/test/kotlin/org/wfanet/virtual_people/core/labeler/: BUILD.bazel  JniLabelerTest.kt
src/test/kotlin/org/wfanet/virtualpeople/core/labeler/: BUILD.bazel  LabelerIntegrationTest.kt  LabelerTest.kt  RankedLabelingIntegrationTest.kt
src/test/kotlin/org/wfanet/virtualpeople/core/model/: BUILD.bazel  BranchNodeImplTest.kt  ConditionalMergeImplTest.kt  PopulationNodeImplTest.kt  UpdateTreeImplTest.kt
src/test/kotlin/org/wfanet/virtualpeople/core/model/utils/: BUILD.bazel  ConsistentHashTest.kt  FeistelTest.kt  FieldFiltersMatcherTest.kt  HashFieldMaskMatcherTest.kt  UpdateMatrixHelperTest.kt  VirtualPeopleSelectorTest.kt
src/test/kotlin/org/wfanet/virtualpeople/core/selector/: BUILD.bazel  VidModelSelectorTest.kt
(+19 files in other folders)
