load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "lru_cache",
    srcs = [
        "lru_cache.cc",
    ],
    hdrs = [
        "lru_cache.h",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)