load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

_INCLUDE_PREFIX = "/src/main/cc"

cc_proto_library(
    name = "model_line_cc_proto",
    deps = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:model_line_proto"],
)

cc_proto_library(
    name = "model_rollout_cc_proto",
    deps = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:model_rollout_proto"],
)

cc_library(
    name = "lru_cache",
    srcs = [
        "lru_cache.cc",
    ],
    hdrs = [
        "lru_cache.h",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "vid_model_selector",
    srcs = [
        "vid_model_selector.cc",
    ],
    hdrs = [
        "vid_model_selector.h",
    ],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":model_line_cc_proto",
        ":model_rollout_cc_proto",
        "@wfa_virtual_people_common//src/main/proto/wfa/virtual_people/common:event_cc_proto",
    ],
)
