load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_test(
    name = "labeler_test",
    srcs = ["labeler_test.cc"],
    deps = [
        "//src/main/cc/wfa/virtual_people/core/labeler",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:event_cc_proto",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:label_cc_proto",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:model_cc_proto",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)

cc_test(
    name = "labeler_integration_test",
    srcs = ["labeler_integration_test.cc"],
    data = [
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_input_01.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_input_02.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_input_03.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_input_04.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_input_05.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_input_06.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_input_07.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_input_08.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_input_09.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_input_10.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_input_11.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_input_12.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_output_01.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_output_02.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_output_03.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_output_04.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_output_05.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_output_06.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_output_07.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_output_08.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_output_09.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_output_10.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_output_11.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:labeler_output_12.textproto",
        "//src/test/cc/wfa/virtual_people/core/labeler/test_data:toy_model.textproto",
    ],
    deps = [
        "//src/main/cc/wfa/virtual_people/core/labeler",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:event_cc_proto",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:label_cc_proto",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:model_cc_proto",
        "@wfa_common_cpp//src/main/cc/common_cpp/protobuf_util:textproto_io",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:common_matchers",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
    ],
)
