load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_proto_library(
    name = "model_line_cc_proto",
    deps = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:model_line_proto"],
)

cc_proto_library(
    name = "model_rollout_cc_proto",
    deps = ["@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:model_rollout_proto"],
)

cc_test(
    name = "vid_model_selector_test",
    srcs = ["vid_model_selector_test.cc"],
    data = [
        "//src/test/proto/wfa/virtual_people/core/labeler/test_data/selector:selector_test_data",
    ],
    deps = [
        "//src/main/cc/wfa/virtual_people/core/selector:vid_model_selector",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@wfa_common_cpp//src/main/cc/common_cpp/protobuf_util:textproto_io",
        "@wfa_common_cpp//src/main/cc/common_cpp/testing:common_matchers",
        "@wfa_virtual_people_common//src/main/proto/wfa/virtual_people/common:event_cc_proto",
    ],
)
