load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//src:__subpackages__"])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "consistent_hash",
    srcs = ["consistent_hash.cc"],
    hdrs = ["consistent_hash.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
)

cc_test(
    name = "consistent_hash_test",
    srcs = ["consistent_hash_test.cc"],
    deps = [
        ":consistent_hash",
        "@com_google_googletest//:gtest_main",
    ],
)
