load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//src:__subpackages__"])

_INCLUDE_PREFIX = "/src/main/cc"

cc_library(
    name = "virtual_person_selector",
    srcs = ["virtual_person_selector.cc"],
    hdrs = ["virtual_person_selector.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        ":consistent_hash",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status:statusor",
        "@com_google_protobuf//:protobuf",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:model_cc_proto",
    ],
)

cc_test(
    name = "virtual_person_selector_test",
    srcs = ["virtual_person_selector_test.cc"],
    deps = [
        ":virtual_person_selector",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
        "@cross_media_measurement//src/test/cc/testutil:matchers",
        "@cross_media_measurement//src/test/cc/testutil:status_macros",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:model_cc_proto",
    ],
)

cc_library(
    name = "consistent_hash",
    srcs = ["consistent_hash.cc"],
    hdrs = ["consistent_hash.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
)

cc_test(
    name = "consistent_hash_test",
    srcs = ["consistent_hash_test.cc"],
    deps = [
        ":consistent_hash",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "distributed_consistent_hashing",
    srcs = ["distributed_consistent_hashing.cc"],
    hdrs = ["distributed_consistent_hashing.h"],
    strip_include_prefix = _INCLUDE_PREFIX,
    deps = [
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_farmhash//:farmhash",
    ],
)

cc_test(
    name = "distributed_consistent_hashing_test",
    srcs = ["distributed_consistent_hashing_test.cc"],
    deps = [
        ":distributed_consistent_hashing",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@cross_media_measurement//src/test/cc/testutil:matchers",
        "@cross_media_measurement//src/test/cc/testutil:status_macros",
    ],
)
