load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(default_visibility = [
    "//src/main/kotlin/org/wfanet/virtualpeople/core:__subpackages__",
])

kt_jvm_library(
    name = "common",
    srcs = glob(["*.kt"]),
    deps = [
        "@maven//:com_google_guava_guava",
    ],
)