load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "labeler",
    srcs = [
        "Labeler.kt",
    ],
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/core/model:model_node",
        "@maven//:com_google_guava_guava",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:event_kt_jvm_proto",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:label_kt_jvm_proto",
        "@virtual_people_common//src/main/proto/wfa/virtual_people/common:model_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//imports/java/com/google/protobuf/util",
    ],
)
