package(default_visibility = [
    "//src/test/cc/wfa/virtual_people/core/labeler:__subpackages__",
    "//src/test/kotlin/org/wfanet/virtualpeople/core/labeler:__subpackages__",
])

exports_files(
    glob(["*.textproto"]) + [
        "toy_model_riegeli_list",
        "single_id_model_riegeli_list",
    ],
)

filegroup(
    name = "labeler_integration_test_data",
    srcs = glob(["*.textproto"]) + [
        "toy_model_riegeli_list",
        "single_id_model_riegeli_list",
    ],
)
