load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "JniLabelerTest",
    timeout = "short",
    srcs = ["JniLabelerTest.kt"],
    test_class = "org.wfanet.virtualpeople.core.labeler.JniLabelerTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtual_people/core/labeler",
        "//src/main/kotlin/org/wfanet/virtual_people/core/labeler/testing",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)
