load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "LabelerTest",
    srcs = ["LabelerTest.kt"],
    test_class = "org.wfanet.virtualpeople.core.labeler.LabelerTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/core/labeler",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

kt_jvm_test(
    name = "LabelerIntegrationTest",
    srcs = ["LabelerIntegrationTest.kt"],
    data = [
        "//src/test/proto/wfa/virtual_people/core/labeler/test_data:labeler_integration_test_data",
    ],
    test_class = "org.wfanet.virtualpeople.core.labeler.LabelerIntegrationTest",
    deps = [
        "//src/main/kotlin/org/wfanet/virtualpeople/core/labeler",
        "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
    ],
)
