load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "testing",
    srcs = glob(["*.kt"]),
    data = ["//src/test/cc/wfa/virtual_people/core/labeler/test_data"],
    deps = [
        "//src/main/kotlin/org/wfanet/virtual_people/core/labeler",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
    ],
)
