load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "utils",
    srcs = glob(["*.kt"]),
    deps = [
        "@maven//:com_google_guava_guava",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
    ],
)
